feat: 完善照片上传功能